feat: close backend scheduler roadmap